Bug 1574222 - Serialize getComputedStyle on text-decoration properly. r=emilio,dholbert

The wpt will be updated in
https://github.com/web-platform-tests/wpt/pull/18866.

Besides, there are some other test cases use text-decoration, so we
have to update them as well. The rule is: if the test case is not related to
old `text-decoration` longhand, we use `text-decoration-line` instead.
If the test case is for testing the change of `text-decoration` from
longhand to shorthand, we should use the correct serialization.

Differential Revision: https://phabricator.services.mozilla.com/D44909